objects/CustomRecentlyViewed__c.object
<CustomObject>
    <fields>
        <fullName>LastViewedDate__c</fullName>
        <label>Last Viewed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RecordId__c</fullName>
        <label>RecordId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordName__c</fullName>
        <label>Record Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordStatus__c</fullName>
        <label>RecordStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Recently_Viewed</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Recently Viewed</label>
    <nameField>
        <displayFormat>RV-{00000000}</displayFormat>
        <label>Recently Viewed Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recently Viewed</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>